Fixed accordion displaying wrong colour

--- a/src/app/pages/journal/journal.page.scss
+++ b/src/app/pages/journal/journal.page.scss
@@ -12,6 +12,9 @@
     margin-top: -4px;
   }
 
+.height-500 {
+  height: 500px;
+}
 
 .refresh-button-icon {
   padding: 0 10px;
